<?xml version="1.0"?>
<package>
  <name>dingo_desktop</name>
  <version>0.0.0</version>
  <description>Packages for working with Dingo from a ROS desktop.</description>

  <maintainer email="dniewinski@clearpathrobotics.com">Dave Niewinski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>dingo_viz</run_depend>

  <export><metapackage/></export>
</package>
