<?xml version="1.0"?>
<package format="3">
  <name>dingo_viz</name>
  <version>0.1.0</version>
  <description>Visualization launchers and helpers for Dingo.</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>dingo_description</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
  	<build_type>ament_cmake</build_type>
  </export>
</package>
